# Logger

./: CMakeLists.txt  README.md
include/logger/: log_message.hpp  logger.hpp  types.hpp
src/: log_message.cpp  logger.cpp  types.cpp
tests/: main.cpp
